# ghcwindowslinkerbug

./: Example.hs  examplecpp.cabal
cbits/: ex.cpp
include/: ex.h
