name:                examplecpp
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  cbits, include
cabal-version:       >=1.18

library
  exposed-modules:     Example
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  c-sources:           cbits/ex.cpp
  include-dirs:        include
  includes:            ex.h
  ghc-options:         -pgml g++ -optl-stdc++
  cc-options:          -std=c++0x
